--- a/src/components/scss/CollapseAppartment.scss
+++ b/src/components/scss/CollapseAppartment.scss
@@ -3,7 +3,6 @@
 .collapses-appartment {
     margin: 50px 100px 50px 100px;
     display: flex;
-    align-items: center;
     gap: 75px;
 
     &__collapse {
@@ -18,6 +17,10 @@
         font-weight: 700;
         font-size: $font-medium;
         padding: 5px;
+    }
+
+    &__collapse--open {
+        margin-bottom: 170px;
     }
 
     &__container--arrows {
@@ -62,6 +65,10 @@
         margin: 50px;
         gap: 40px;
     }
+
+    .collapses-appartment__collapse--open {
+        margin-bottom: 210px;
+    }
 }
 
 @media (max-width:$layout-breakpoint-small) {
@@ -73,6 +80,10 @@
 
     .collapses-appartment__collapse {
         height: 30px;
+    }
+
+    .collapses-appartment__collapse--open {
+        margin-bottom: 120px;
     }
 
     .collapses-appartment__collapse--title {
